Fix checkbox alignment in checkboxes and dirty indicators

--- a/src/components/icons/_icons-uplift.scss
+++ b/src/components/icons/_icons-uplift.scss
@@ -31,5 +31,5 @@
 }
 
 .icon-dirty.dirty-checkbox.is-checked {
-  top: 3px;
+  top: 2px;
 }
