--- a/src/components/icons/_icons.scss
+++ b/src/components/icons/_icons.scss
@@ -215,8 +215,8 @@ svg.icon-logo {
   &.dirty-checkbox {
     &.is-checked {
       border-width: 4px;
-      left: 1px;
-      top: 1px;
+      left: 0;
+      top: 0;
       z-index: 2;
     }
   }
@@ -645,4 +645,11 @@ html[dir='rtl'] {
     margin: 1px 1px 0 0;
   }
 
+}
+
+.is-firefox {
+  .icon-dirty.dirty-checkbox.is-checked {
+    left: 0;
+    top: 2px;
+  }
 }
